# mexc-rs

./: .env.example  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
examples/: create_order.rs  futures_get_account_asset.rs  futures_get_account_assets.rs  futures_get_kline.rs  futures_get_open_orders.rs  futures_get_open_position.rs  futures_get_open_positions.rs  futures_get_server_time.rs  futures_order.rs  simple_subscription.rs  spot_account_deals_private_subscription.rs  spot_account_orders_private_subscription.rs  spot_create_order.rs  spot_create_user_data_stream.rs  spot_keep_alive_user_data_stream.rs  spot_private_subscription_and_unsubscribe.rs  spot_simple_private_subscription.rs  spot_simple_private_subscription_v2.rs  spot_simple_public_subscription_v3.rs  spot_simple_subscription.rs  spot_subscription_and_unsubscribe.rs
src/: lib.rs
src/futures/: auth.rs  error.rs  mod.rs  response.rs  result.rs
src/futures/v1/: models.rs
src/futures/v1/endpoints/: get_account_asset.rs  get_account_assets.rs  get_kline.rs  get_open_orders.rs  get_open_positions.rs  get_server_time.rs  mod.rs  order.rs
src/spot/: mod.rs
src/spot/v3/: account_information.rs  avg_price.rs  cancel_all_open_orders_on_a_symbol.rs  cancel_order.rs  create_user_data_stream.rs  default_symbols.rs  depth.rs  enums.rs  exchange_information.rs  get_open_orders.rs  get_order.rs  keep_alive_user_data_stream.rs  klines.rs  mod.rs  models.rs  order.rs  ping.rs  query_order.rs  time.rs  trades.rs
src/spot/ws/: acquire_websocket.rs  auth.rs  endpoint.rs  message.rs  mod.rs  spot_deals.rs  stream.rs  subscribe.rs  subscription.rs  topic.rs
src/spot/ws/message/: account_deals.rs  account_orders.rs  account_update.rs  deals.rs  kline.rs  orderbook_update.rs
src/spot/ws/private/: account_deals.rs  account_orders.rs  account_update.rs  mod.rs  subscription.rs
src/spot/ws/public/: kline.rs  mod.rs  spot_deals.rs  subscription.rs
src/spot/wsv2/: acquire_websocket.rs  auth.rs  endpoint.rs  message.rs  mod.rs  stream.rs  subscribe.rs  topic.rs
src/spot/wsv2/message/: account_deals.rs  account_orders.rs  account_update.rs  deals.rs  kline.rs
src/v3/: account_information.rs  cancel_all_open_orders_on_a_symbol.rs  cancel_order.rs  default_symbols.rs  depth.rs  enums.rs  exchange_information.rs  get_order.rs  klines.rs  mod.rs  order.rs  ping.rs  time.rs  trades.rs
src/ws/: mod.rs  spot_deals.rs  subscription.rs
