[package]
name = "mexc-rs"
version = "0.6.3"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/elertan/mexc-rs"
description = "Rust client for the mexc.com exchange"
keywords = ["mexc", "exchange", "api", "rest", "websocket"]

[features]
default = ["spot", "futures", "ws"]
spot = []
futures = []
ws = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
futures = "0.3.28"
tracing = "0.1.37"
thiserror = "1.0.44"
tokio-tungstenite = { version = "0.20.0", features = ["native-tls"] }
reqwest = { version = "0.11.18", features = ["json"] }
rust_decimal = { version = "1.31.0", features = ["serde"] }
async-trait = "0.1.72"
serde_path_to_error = "0.1.14"
dotenv = "0.15.0"
serde_urlencoded = "0.7.1"
hmac = "0.12.1"
sha2 = "0.10.7"
hex = "0.4.3"
serde_repr = "0.1.16"
strum_macros = "0.25.1"
strum = "0.25.0"
async-stream = "0.3.5"
tracing-subscriber = "0.3.17"
anyhow = "1.0.72"
num = "0.4.1"
num-derive = "0.4.0"
num-traits = "0.2.16"
tokio-util = "0.7.8"
async-channel = "1.9.0"
serde_with = "3.1.0"
uuid = { version = "1.4.1", features = ["v4"] }
prost = "0.13.5"
tonic = "0.12.2"

[build-dependencies]
tonic-build = "0.12.2"
